# dkls23

./: .dockerignore  .gitignore  .gitlab-ci.yml  .htaccess  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose-local.yaml  docker-compose.yaml  index.html
.github/workflows/: rust-benchmarks.yml  rust.yml
crates/dkls-metrics/: Cargo.toml
crates/dkls-metrics/benches/: dkls.rs
crates/dkls-metrics/src/: dkg.rs  dsg.rs  flags.rs  key_refresh.rs  lib.rs  main.rs  relay.rs
crates/dkls-party/: Cargo.toml
crates/dkls-party/scripts/: dkg-setup.sh  dkg.sh  dsg-setup.sh  dsg.sh
crates/dkls-party/src/: coord.rs  flags.rs  keygen.rs  main.rs  serve.rs  sign.rs  utils.rs
crates/msg-relay/: Cargo.toml
crates/msg-relay-client/: Cargo.toml
crates/msg-relay-client/src/: lib.rs
crates/msg-relay-svc/: Cargo.toml  rustfmt.toml
crates/msg-relay-svc/src/: flags.rs  main.rs
crates/msg-relay/src/: lib.rs
dev/bench/: data.js
dkls23/: all.html  crates.js  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js
dkls23/key_export/: index.html
dkls23/key_import/: index.html
dkls23/keygen/: fn.run.html
dkls23/proto/: trait.EncryptionScheme.html  type.Scheme.html
dkls23/setup/: constant.ABORT_MESSAGE_TAG.html  constant.SETUP_MESSAGE_TAG.html  index.html  sidebar-items.js  trait.KeygenSetupMessage.html  trait.PreSignSetupMessage.html  trait.ProtocolParticipant.html  trait.QuorumChangeSetupMessage.html  trait.SignSetupMessage.html  trait.Signer.html
dkls23/sign/: fn.message_receivers.html  index.html  sidebar-items.js
dkls23/sl_dkls23/: all.html  constant.VERSION.html  struct.MsgId.html  trait.Relay.html
docs/: crates.js  data.js
docs/dkls23/: struct.MessageSendError.html
docs/sl_dkls23/: index.html  struct.InstanceId.html  struct.MessageSendError.html  type.Seed.html
examples/: common.rs  dkg.rs  dsg.rs  key_refresh.rs  keygen.rs  refresh.rs  sign.rs  vsot.rs
rustdocs/: crates.js  help.html  search-index.js  settings.html  src-files.js
rustdocs/aead/: all.html  index.html  struct.Error.html
rustdocs/base16ct/: all.html  enum.Error.html  struct.HexDisplay.html
rustdocs/block_buffer/: struct.BlockBuffer.html  struct.Eager.html  struct.Error.html  struct.Lazy.html
rustdocs/bs58/: all.html  fn.decode.html  fn.encode.html  index.html  struct.Alphabet.html
rustdocs/chacha20/: fn.hchacha.html  struct.ChaCha20LegacyCore.html  struct.ChaChaCore.html  struct.XChaChaCore.html  type.Key.html  type.LegacyNonce.html  type.Nonce.html  type.XNonce.html
rustdocs/chacha20poly1305/: all.html  index.html  struct.ChaChaPoly1305.html  struct.Error.html  trait.AeadCore.html  trait.KeyInit.html  trait.KeySizeUser.html
rustdocs/cipher/: index.html
rustdocs/crypto_bigint/: index.html
rustdocs/curve25519_dalek/: index.html
rustdocs/der/: all.html  enum.Class.html  enum.ErrorKind.html  enum.Tag.html  enum.TagMode.html  index.html  struct.DateTime.html  struct.EncodeRef.html  struct.EncodeValueRef.html  struct.Error.html  struct.Header.html  struct.IndefiniteLength.html  struct.Length.html  struct.NestedReader.html  struct.SliceReader.html  struct.SliceWriter.html  struct.TagNumber.html  trait.Decode.html  trait.DecodeValue.html  trait.Encode.html  trait.EncodeValue.html  trait.FixedTag.html  trait.Reader.html  trait.Tagged.html  trait.ValueOrd.html  trait.Writer.html
rustdocs/derivation_path/: all.html  enum.ChildIndex.html  enum.ChildIndexError.html  enum.ChildIndexParseError.html  enum.DerivationPathError.html  enum.DerivationPathParseError.html  enum.DerivationPathType.html  index.html  struct.DerivationPath.html
rustdocs/dkls23/: all.html  constant.VERSION.html  index.html  struct.InstanceId.html  struct.MessageSendError.html  struct.MsgId.html  trait.Relay.html  type.Seed.html
rustdocs/ecdsa/: struct.Error.html  struct.Signature.html  struct.SignatureWithOid.html  struct.VerifyingKey.html  trait.SignatureEncoding.html
rustdocs/either/: enum.Either.html  struct.IterEither.html  trait.IntoEither.html
rustdocs/elliptic_curve/: all.html  index.html  struct.Error.html  struct.PublicKey.html  struct.SecretKey.html
rustdocs/ff/: all.html  index.html  trait.Field.html
rustdocs/futures_util/: all.html  index.html
rustdocs/generic_array/: struct.GenericArray.html
rustdocs/group/: all.html  index.html
rustdocs/hmac/: struct.HmacCore.html
rustdocs/inout/: all.html  index.html  struct.InOutBufReserved.html  struct.IntoArrayError.html  struct.NotEqualError.html  struct.OutIsTooSmallError.html
rustdocs/k256/: index.html  struct.AffinePoint.html  struct.ProjectivePoint.html  struct.Scalar.html
rustdocs/rayon/: enum.Yield.html  (+8 more)
scripts/: process_benchmarks_to_html.py
src/: key_export.rs  key_import.rs  lib.rs  pairs.rs  proto.rs  setup.rs
testdata/: .gitattributes  party_0_sk  party_1_sk  party_2_sk  setup_sk  setup_vk
wrapper/node/: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
wrapper/node/js/: bindings.js  index.ts  types.d.ts
wrapper/node/npm/darwin-arm64/: README.md  package.json
wrapper/node/npm/darwin-x64/: README.md  package.json
wrapper/node/npm/linux-arm64-gnu/: README.md  package.json
wrapper/node/npm/linux-x64-gnu/: README.md  package.json
wrapper/node/src/: dkg.rs  dsg.rs  lib.rs
wrapper/node/tests/: keygen.test.ts
wrapper/wasm/: Cargo.toml  deno.jsonc  dkls_test.js  main.ts  main_test.ts
wrapper/wasm/demo/: package-lock.json  package.json  proxy-local.js  proxy.js  server.js  svelte.config.js  vite.config.ts
wrapper/wasm/demo/src/lib/: base64.ts  config.ts  dkls.ts  hex.ts  index.ts  nodes.ts  stores.ts
wrapper/wasm/demo/src/lib/components/: Intro.svelte  SummaryTimes.svelte  TimeEntry.svelte  TimeMetrics.svelte
wrapper/wasm/demo/src/routes/: +layout.svelte  +page.svelte
wrapper/wasm/demo/src/routes/all-cloud/: +page.svelte
wrapper/wasm/demo/src/routes/web-cloud/: +page.svelte
wrapper/wasm/js/: msg-relay.js  test.ts
wrapper/wasm/src/: abort.rs  keygen.rs  keyshare.rs  lib.rs  relay.rs  setup.rs  sign.rs  utils.rs
(+2165 files in other folders)
