[package]
name = "dkls23"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "multi-thread" ]
multi-thread = [ "tokio/rt-multi-thread" ]

[dependencies]
bincode.workspace = true
sl-mpc-mate.workspace = true
sl-oblivious.workspace = true
digest.workspace = true
sha2.workspace = true
k256 = { workspace = true, features= [ "ecdsa" ] }
merlin.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros" ] }
derivation-path.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex ="0.4.3"
tokio = { workspace = true, features = ["rt", "sync", "macros", "rt-multi-thread" ] }
tracing-subscriber = { workspace = true }

[workspace]
members = [
  ".",
  "crates/dkls-party",
  "crates/msg-relay",
  "crates/msg-relay-svc",
  "crates/msg-relay-client",
  "wrapper/wasm"
]

[workspace.dependencies]
bincode = "2.0.0-rc.3"
digest = "0.10.7"
sha2 = "0.10.8"
k256 = "0.13.2"
merlin = "3.0.0"
rand = "0.8"
rand_chacha = "0.3"
rayon ="1"
thiserror = "=1.0.49" # 1.0.50 is broken
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1.34.0"
futures-util = "0.3.29"
anyhow = "1"
derivation-path = "0.2.0"
zeroize = "1.6.1"
sl-mpc-mate  = { git = "https://gitlab.com/com.silencelaboratories/sl-crypto.git", rev = "97dc1c6321383c068e183d8e5704d65bdc098d18" }
sl-oblivious = { git = "https://gitlab.com/com.silencelaboratories/sl-crypto.git", rev = "97dc1c6321383c068e183d8e5704d65bdc098d18" }

[profile.release]
# lto = true
# strip = "symbols"
# debug = true
