[package]
name = "dkls23"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "multi-thread" ]
multi-thread = [ "tokio/rt-multi-thread" ]

[dependencies]
bincode = "2.0.0-rc.3"
sl-mpc-mate  = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "97dc1c6321383c068e183d8e5704d65bdc098d18" }
sl-oblivious = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "97dc1c6321383c068e183d8e5704d65bdc098d18" }
digest = "0.10.7"
sha2 = "0.10.8"
k256 = { version = "0.13.2", features= [ "ecdsa" ] }
merlin = "3.0.0"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "=1.0.49" # 1.0.50 is broken
tracing = "0.1"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["rt", "sync", "macros" ] }
derivation-path = "0.2.0"
zeroize = "1.6.1"

[dev-dependencies]
hex ="0.4.3"
tokio = { version = "1.34.0", features = ["rt", "sync", "macros", "rt-multi-thread" ] }
tracing-subscriber = "0.3"
