[package]
name = "dkls23"
version = "0.1.0"
edition = "2021"
publish = false
license-file ="LICENSE"


[[example]]
name = "keygen"

[[example]]
name = "sign"

[[example]]
name = "refresh"


[features]
default = ["multi-thread", "tracing"]
multi-thread = ["dep:tokio", "tokio/rt-multi-thread"]
test-support = ["sl-mpc-mate/simple-relay"]

[dependencies]
sl-mpc-mate.workspace = true
sl-oblivious.workspace = true
sha2.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
merlin.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
futures-util.workspace = true
tokio = { workspace = true, features = ["rt", "macros"], optional = true }
derivation-path.workspace = true
zeroize.workspace = true
signature.workspace = true
bytemuck.workspace = true
x25519-dalek = { workspace = true, features = ["reusable_secrets", "zeroize"] }
aead.workspace = true
chacha20 = { version = "0.9" }
chacha20poly1305 = { version = "0.10.1" }

[dev-dependencies]
hex = "0.4.3"
sl-mpc-mate = { workspace = true, features = ["simple-relay"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[workspace]
members = [
  ".",
  "crates/msg-relay",
  "crates/dkls-metrics",
]

[workspace.dependencies]
aead = { version = "0.5.2" }
bytemuck = { version = "1.14.1", features = ["derive", "min_const_generics", "extern_crate_alloc"] }
sha2 = "0.10.8"
k256 = { version = "0.13.2", default-features = false }
merlin = "3.0.0"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
tokio = "1.34.0"
futures-util = { version = "0.3.30", default-features = false }
anyhow = "1"
derivation-path = "0.2.0"
zeroize = "1.6.1"
sl-mpc-mate = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "ff63353" }
sl-oblivious = { git = "https://github.com/silence-laboratories/sl-crypto.git", rev = "ff63353" }

x25519-dalek = { version = "2.0.0" }
signature = { version = "2.2.0" }
