[package]
name = "dkls-metrics"
version = "0.1.0"
edition = "2021"
license-file ="../../LICENSE"

[lib]
path = "src/lib.rs"
doctest = false
bench = false

[[bin]]
name = "dkls-metrics"
path = "src/main.rs"
bench = false

[dependencies]
dkls23 = { path = "../..", features = [ "multi-thread", "test-support" ] }
msg-relay = { path = "../msg-relay" }
sl-mpc-mate = { workspace = true }
tokio = { workspace = true, features = [ "rt", "rt-multi-thread" ] }
tracing-subscriber = { workspace = true, features = [ "fmt" ] }
rand.workspace = true
xflags = "0.3"
anyhow = { workspace = true }
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = [ "async_tokio" ]}

[[bench]]
name = "dkls"
harness = false

[profile.bench]
lto = true
