[package]
name = "msg-relay-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
msg-relay = { path = "../msg-relay" }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

axum = { version = "0.6" }
tower-http = { version = "0.3.0", features = ["trace", "cors"] }
tower-layer = "0.3.2"
