[package]
name = "msg-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
sl-mpc-mate = { path = "../../../sl-crypto/crates/sl-mpc-mate" }
futures-util = { version = "0.3.28" }
tokio = { version = "1", features = ["rt", "sync"] }
axum = { version = "0.6", features = [ "ws" ] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros" ] }