[package]
name = "msg-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.28" }
axum = { version = "0.6", features = [ "ws" ] }

tracing = { workspace = true }
tokio = { workspace = true }

sl-mpc-mate = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "sync", "macros" ] }