[package]
name = "msg-relay"
version = "0.1.0"
edition = "2021"
license-file ="../../LICENSE"

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
sl-mpc-mate = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "sync", "macros" ] }